# course_work_2024

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml
.github/workflows/: production.yml
backend/: .gitignore  Dockerfile  clear.sh  pyproject.toml
backend/backend/: __init__.py  __main__.py  config.py
backend/backend/db_client/: __init__.py  documents_collection.py  users_collection.py
backend/backend/mongo/: __init__.py
backend/backend/server/: __init__.py  documents_handlers.py  handlers.py  home_handler.py  users_handlers.py
client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.tsx
client/src/components/DocumentsModule/: Document.tsx  DocumentPreview.tsx  DocumentText.tsx  DocumentsList.tsx  DocumentsPage.tsx
client/src/components/DocumentsModule/styles/: Document.css  DocumentList.css  DocumentPreview.css  DocumentsPage.css
client/src/components/ErrorModule/: ErrorMessage.css  ErrorMessage.tsx
client/src/components/LoginModule/: LoginForm.tsx  LoginPage.css  LoginPage.tsx  RegisterForm.tsx
client/src/ts/classes/: LatexDocument.class.ts  User.class.ts
client/src/ts/classes/API/: API.class.ts  DodumentsAPI.class.ts  PrivateDocumentsAPI.class.ts  PublicDocumentsAPI.class.ts  UserAPI.class.ts
client/src/ts/interfaces/: States.interface.ts
client/src/ts/interfaces/API/: Documents_API.interface.ts  PrivateDocuments_API.interface.ts  PublicDocuments_API.interface.ts  User_API.interface.ts
