[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ProbablyDead <97610135+ProbablyDead@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
pymongo = "^4.7.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"
bcrypt = "^4.1.3"
pdfkit = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "backend:start"
